@@ -44,7 +44,7 @@ library(tables)
 tabular( (Species + 1) ~ (n=1) + Format(digits=2)*
          (Sepal.Length + Sepal.Width)*(mean + sd), data=iris )
 @
-You can also pass the output through the \code{Hmisc::latex()} function \citep{Hmisc}
+You can also pass the output through the \code{Hmisc::latex()} function \citep{Hmisc,HmiscLatex}
 to produce \LaTeX\ output,
 which when processed by \code{pdflatex} will produce the following table:
 \begin{center}
@@ -622,7 +622,7 @@ with more flexibility.  It has syntax
 
 \begin{Schunk}
 \begin{Sinput}
-RowFactor(x, name, spacing=3, space=1)
+RowFactor(x, name, spacing=3, space=1, nopagebreak="\\nopagebreak")
 \end{Sinput}
 \end{Schunk}
 
@@ -630,8 +630,9 @@ The arguments are
 \begin{description}
 \item[x] A variable to be treated as a factor.
 \item[name] The name to be used for the factor; by default, the name passed as \code{f}.
-\item[spacing] Extra spacing is added after every \code{spacing} lines.
+\item[spacing] Extra spacing is added after every group of \code{spacing} lines.
 \item[space] How much extra space to add (in ``ex'' units).
+\item[nopagebreak] Macro to insert to suppress page breaks except between groups.
 \end{description}
 
 Example: Show the first 50 lines of the iris dataset, in groups of 5 lines.  Use
@@ -682,6 +683,10 @@ leading spaces.
 an attempt is made to justify the results using simple ASCII spacing, according to the \code{Justify()}
 specification with the \code{justification} argument used as a default.
 \end{enumerate}
+
+\section*{Acknowledgments}
+
+I gratefully acknowledge helpful suggestions and hints from Rich Heiberger and Frank Harrell.
 
 \bibliography{tables}
 
