@@ -14,3 +14,11 @@
     note = {\LaTeX\ package version 1.61803},
     url = {http://www.ctan.org/tex-archive/macros/latex/contrib/booktabs}
   }
+  
+  @Manual{HmiscLatex,
+    title = {latex:  Convert an S Object to LaTeX, and Related Utilities},
+    author = {Harrell, Jr., Frank E. and Richard M. Heiberger and David R. Whiting},
+    year = {2011},
+    note = {Help page in Hmisc 3.9-0},
+    url = {http://CRAN.R-project.org/package=Hmisc}
+  }
